[package]
name = "spaces-poc-rust"
version = "0.1.0"
authors = ["mkulak <kleshney@gmail.com>"]
edition = "2018"

[dependencies]
log = "0.4"
env_logger = "*"
futures-util = { version = "0.3", default-features = false, features = ["async-await", "sink", "std"] }
pin-project = "1.0"
tokio = { version = "1.0.0", features = ["full"] }
tungstenite = "0.13.0"
tokio-tungstenite = "*"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
parking_lot = "*"
